examples/error-codes/violates-constraint/fatal/CV-CERL8-bad-static.output
File: CV-CERL8-bad-static.c
Line: 6
Error: CV-CERL8
Description: Invalid operand types to ==.
Type: Constraint violation.
See also: C11 sec. 6.5.9:2
Translation failed (config dumped). Run kcc -d CV-CERL8-bad-static.c to see commands run.
